# resume-agent

./: .gitignore  README.md
.github/workflows/: deploy-frontend.yml
backend/: .env.example  pyproject.toml
backend/deploy_pkg/: requirements.txt
backend/deploy_pkg/src/resume_agent/: llm.py  main.py  redis.py  schemas.py
backend/deploy_pkg/src/resume_agent/api/: resume_analyze.py
backend/src/resume_agent/: cache.py  llm.py  main.py  prompt.py  redis.py
backend/src/resume_agent/api/: resume_analyze.py
backend/src/resume_agent/pdf_parser/: clean.py  parsed_by_pymupdf4llm.py
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: error.ts  resume.ts  schemas.ts
frontend/src/components/: AnalyzeResult.tsx  JobDescriptionInput.tsx  ResumeAnalyzer.tsx  ResumeUpload.tsx
