[project]
name = "backend"
version = "0.1.0"
description = "The backend of resume-agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "litellm>=1.91.0",
    "pydantic>=2.13.4",
    "pymupdf4llm>=1.28.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "uvicorn>=0.50.2",
]
